(lang dune 3.22)
; (name cs6868_concurrent_programming_project)
; (generate_opam_files false)

; (package
;  (name cs6868_concurrent_programming_project)
;  (depends
;   ocaml
;   dune
;   ppx_expect))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
