; Shared linearisability harness, reused by every *_lin_test below.
(library
 (name lin_harness_lib)
 (modules lin_harness)
 (wrapped false)
 (libraries sqs_eio sqs_primitives qcheck-core qcheck-core.runner eio_main)
 (ocamlopt_flags (:standard -w -21-32))
 (ocamlc_flags (:standard -w -21-32)))

; Executable: manual concurrent tests
(executable
 (name smoke_test)
 (modules smoke_test)
 (ocamlopt_flags (:standard -w -21-32))
 (ocamlc_flags (:standard -w -21-32))
 (libraries sqs_eio sqs_primitives unix))

(executable
 (name cross_domain_smoke)
 (modules cross_domain_smoke)
 (libraries sqs_eio sqs_primitives eio_main unix)
 (ocamlopt_flags (:standard -w -21-32))
 (ocamlc_flags (:standard -w -21-32)))

; Linearisability tests — each domain runs inside its own Eio_main.run
; scheduler, so Light_thread.suspend/resume work correctly across domains.
(test
 (name semaphore_lin_test)
 (modules semaphore_lin_test)
 (libraries sqs_eio sqs_primitives lin_harness_lib qcheck-core qcheck-core.runner eio_main)
 (ocamlopt_flags (:standard -w -21-32))
 (ocamlc_flags (:standard -w -21-32)))

(test
 (name count_down_latch_lin_test)
 (modules count_down_latch_lin_test)
 (libraries sqs_eio sqs_primitives lin_harness_lib qcheck-core qcheck-core.runner eio_main)
 (ocamlopt_flags (:standard -w -21-32))
 (ocamlc_flags (:standard -w -21-32)))

(test
 (name barrier_lin_test)
 (modules barrier_lin_test)
 (libraries sqs_eio sqs_primitives lin_harness_lib qcheck-core qcheck-core.runner eio_main)
 (ocamlopt_flags (:standard -w -21-32))
 (ocamlc_flags (:standard -w -21-32)))

(test
 (name blocking_pool_lin_test)
 (modules blocking_pool_lin_test)
 (libraries sqs_eio sqs_primitives lin_harness_lib qcheck-core qcheck-core.runner eio_main)
 (ocamlopt_flags (:standard -w -21-32))
 (ocamlc_flags (:standard -w -21-32)))
